# CSD_25-26

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  git_command_line_overview.md  repo_clonen.md
csd2a/: Deliverables_deadlines.md  opdrachten.md  sessions_overview_tbd.md
csd2a/session1/: hello_bliep.py
csd2a/session3/: 3a_playRhythm.py  3a_playRhythm_final.py  3b_time_test.py  3d_timestamps.py  session.md
csd2a/session3/sample_player/: 01_playASound.py  05_oneSampleSequenceSteps.py
csd2a/session4/: 4d_dictionary_sorting_function.py  4e_dictonary.py  4f_dictionary_generation_function.py  session.md
csd2a/session5/: 5a_module_import.py  5b_userinput.py  5c_ui_func_options_easy.py  5d_ui_func_options_modular.py  5e_ui_func_value_easy.py  session.md
csd2b/: CMakeLists.txt  install_compiler.md
csd2b/_assignments/: 1_Leerdoelen_design.md  1_assignments.md  2_assignments.md  2_audio_flow_and_pseudo_code.md  3_assignments.md  4_assignments.md
csd2b/_assignments/2_melody/: callback.cpp  callback.h
csd2b/_session1/: assignments.md  compilen.md  session.md
csd2b/_session2/: psuedo_code.md  session.md
csd2b/_session2/1_oscillator/: oscillator.h
csd2b/_session2/1_oscillator_stepBstep/: CMakeLists.txt
csd2b/_session2/4_sine/: main.cpp
csd2b/_session3/3_sineSquareSaw/: callback.h
csd2b/_session4/: CMakeLists.txt  session.md
csd2b/_session4/1_melody/: callback.cpp  melody.cpp  melody.h  square.cpp  square.h
csd2b/_session4/6_polymorphism_dynamicAllocation/: CMakeLists.txt
csd2b/_session4/extra_fm/: CMakeLists.txt  callback.cpp  callback.h
csd2b/_session4/extra_fm/example_code/: CMakeLists.txt  callback.cpp
csd2b/_session4/extra_fm/extra_fm_info/information/: information_fm.md
csd2b/_session4/extra_fm_information/: information_fm.md
csd2b/_session4/extra_fm_information/information/: information_fm.md
csd2b/_session5/: session.md
csd2b/_session5/1_macro/: CMakeLists.txt  main.cpp  recap.cpp
csd2b/_session5/2_polymorphism_dynamicAllocation/: main.cpp
csd2b/_session5/6_polymorphism_dynamicAllocation/: CMakeLists.txt
csd2b/voorbereiding/: 2_compilen_hello_world.md
csd2c/: CMakeLists.txt  references_self-study.md
csd2c/PP_C_Focus/: CMakeLists.txt  README.md  settings.h
csd2c/PP_C_Focus/csd_lib/oscillators/: oscillator.h
csd2c/PP_C_Focus/csd_lib/utils/: CMakeLists.txt
csd2c/Plugin_Focus/: CMakeLists.txt  EffectsChain.h  README.md
csd2c/Plugin_Focus/csd_lib/audio/: audiocomponent.h
csd2c/Plugin_Focus/csd_lib/effects/: waveShaper.cpp
csd2c/Plugin_Focus/csd_lib/oscillators/: oscillator.h
csd2c/Plugin_Focus/csd_lib/utils/: CMakeLists.txt
csd2c/_01_session/: CMakeLists.txt  session.md
csd2c/_01_session/1_tremolo/: CMakeLists.txt  customCallback.cpp
csd2c/_01_session/1b_tremolo_in_class/: CMakeLists.txt
csd2c/_01_session/2_applyEffectExample_csdlib/: CMakeLists.txt
csd2c/_01_session/3_applyEffectExample_csdlib/: CMakeLists.txt  customCallback.cpp  customCallback.h
csd2c/_01_session/PP_C_Focus_test/: CMakeLists.txt  customCallback.h
csd2c/_01_session/tremolo/: CMakeLists.txt  audiocomponent_.h  customCallback.cpp
csd2c/_06_session/: session.md
csd2c/_06_session/delay_old_lib/1_delay_simple/: delay.h
csd2c/_07_session/1_delay/: changeableDelay.cpp  changeableDelay.h  customCallback.cpp  line.cpp  line.h  signal.cpp  signal.h
csd2c/_07_session/2_delay/: customCallback.cpp
csd2c/_07_session/4_delay_signal_interpolated/: CMakeLists.txt  effect.h  line.cpp  line.h  signal.h
csd2c/assignments/: 1_Leerdoelen_design.md  1_assignments.md
csd2c/blueprint_projects/PP_C_Focus/: CMakeLists.txt  main.cpp  settings.h
csd2c/blueprint_projects/PP_C_Focus/csd_lib/: audiocomponent.h
csd2c/blueprint_projects/PP_C_Focus/csd_lib/audio/: audiocomponent.h
csd2c/blueprint_projects/PP_C_Focus/csd_lib/effects/: waveShaper.h
csd2c/blueprint_projects/Plugin_Focus/: CMakeLists.txt  EffectsChain.h
csd2c/blueprint_projects/Plugin_Focus/csd_lib/: CMakeLists.txt
csd2c/blueprint_projects/Plugin_Focus/csd_lib/audio/: CMakeLists.txt
csd2c/blueprint_projects/Plugin_Focus/csd_lib/effects/: CMakeLists.txt
csd2c/blueprint_projects/Plugin_Focus/csd_lib/utils/: CMakeLists.txt
csd2c/codeclinics/: CMakeLists.txt
csd2c/codeclinics/cc2/: overview.md
csd2c/codeclinics/cc6/: PluginEditor.h  svgslider.h
csd2c/codeclinics/cc7/: PluginEditor.cpp  PluginEditor.h  pngslider_guide.md  svgslider_guide.md
csd2c/csd_lib/: CMakeLists.txt
csd2c/csd_lib/audio/: CMakeLists.txt
csd2c/csd_lib/effects/: CMakeLists.txt  waveShaper.cpp
csd2c/csd_lib/oscillators/: CMakeLists.txt
csd2c/csd_lib/utils/: CMakeLists.txt
csd2d/: assignment.md  assignment1.md
extra_ML-dag/: CMakeLists.txt
